--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <img class="slides fade" src="images/it-icons.webp" alt="IT Icons">
     <img class="slides fade" src="images/notebook-coffee.jpg" alt="Notebook with Coffee">
     <img class="slides fade" src="images/server-admin.jpg" alt="Server Admin">
-    <img class="slides fade" src="images/network-concept.jpg" alt="Digital Network">
+    <img class="slides fade" src="images/ChatGPT Image Jul 4, 2025, 10_27_04 AM.png" alt="Digital Network">
   </div>
 
   <section id="about">
